--- a/Planillas/Content/Site.css
+++ b/Planillas/Content/Site.css
@@ -273,13 +273,10 @@ sup {
 }
 
 a {
-    color: var(--bs-link-color);
-    text-decoration: underline;
+    color: white;
+    text-decoration: none;
 }
 
-    a:hover {
-        color: var(--bs-link-hover-color);
-    }
 
     a:not([href]):not([class]), a:not([href]):not([class]):hover {
         color: inherit;
