--- a/Planillas/Views/Shared/_Layout.cshtml
+++ b/Planillas/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <nav class="sb-topnav navbar navbar-expand " style="background-color: #e3f2fd;">
         <div class="container-fluid">
             <div>
-                <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand ps-3" href="index.html">Planillas</a>
                 <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><svg class="svg-inline--fa fa-bars fa-w-14" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg><!-- <i class="fas fa-bars"></i> Font Awesome fontawesome.com --></button>
             </div>
             <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
@@ -60,7 +60,7 @@
                 </div>
             </nav>
         </div>
-        <div id="layoutSidenav_content">
+        <div id="layoutSidenav_content" style="margin: 25px;" >
             <main>
                 @RenderBody()
             </main>
