--- a/Planillas/Views/EMPLEADO/Details.cshtml
+++ b/Planillas/Views/EMPLEADO/Details.cshtml
@@ -1,50 +1,26 @@
-﻿@model Planillas.EMPLEADO
+﻿@model Planillas.V_EMPLEADOS
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>EMPLEADO</h4>
+    <h4>Empleados</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.PRIMER_NOMBRE)
+            Nombre
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PRIMER_NOMBRE)
+            @Html.DisplayFor(model => model.NOMBRE_EMPLEADO)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SEGUNDO_NOMBRE)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SEGUNDO_NOMBRE)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PRIMER_APELLIDO)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PRIMER_APELLIDO)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SEGUNDO_APELLIDO)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SEGUNDO_APELLIDO)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FECHA_NACIMIENTO)
+            Fecha Nacimiento
         </dt>
 
         <dd>
@@ -52,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SEXO)
+            Sexo
         </dt>
 
         <dd>
@@ -60,31 +36,31 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PAIS)
+            País
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PAIS)
+            @Html.DisplayFor(model => model.NOMBRE_PAIS)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DEPARTAMENTO)
+            Departamento
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DEPARTAMENTO)
+            @Html.DisplayFor(model => model.NOMBRE_DEPARTAMENTO)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.MUNICIPIO)
+            Municipio
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MUNICIPIO)
+            @Html.DisplayFor(model => model.NOMBRE_MINICIPIO)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DIRECCION)
+            Dirección
         </dt>
 
         <dd>
@@ -92,7 +68,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ESTADO_CIVIL)
+            Estado Civil
         </dt>
 
         <dd>
@@ -100,7 +76,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TELEFONO)
+            Teléfono
         </dt>
 
         <dd>
@@ -108,7 +84,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CORREO_ELECTRONICO)
+            Email
         </dt>
 
         <dd>
@@ -116,7 +92,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LUGAR_NACIMIENTO)
+            Lugar Nacimiento
         </dt>
 
         <dd>
@@ -124,7 +100,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DUI)
+            DUI
         </dt>
 
         <dd>
@@ -132,7 +108,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NIT)
+            NIT
         </dt>
 
         <dd>
@@ -140,7 +116,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AFP)
+            AFP
         </dt>
 
         <dd>
@@ -148,7 +124,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SEGURO)
+            SEGURO
         </dt>
 
         <dd>
@@ -156,7 +132,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NUP)
+            NUP
         </dt>
 
         <dd>
@@ -164,15 +140,15 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TIPO_EMPLEADO)
+            Tipo Empleado
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TIPO_EMPLEADO)
+            @Html.DisplayFor(model => model.NOMBRE_TIPO_EMPLEADO)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FECHA_INGRESO)
+            Fecha Ingreso
         </dt>
 
         <dd>
@@ -180,7 +156,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FECHA_RETIRO)
+            Fecha Retiro
         </dt>
 
         <dd>
@@ -188,7 +164,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.USUARIO_CREA)
+            Usuario Creación.
         </dt>
 
         <dd>
@@ -196,7 +172,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FECHA_CREA)
+            Fecha Creación
         </dt>
 
         <dd>
@@ -204,32 +180,24 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.USUARIO_ACTUALIZA)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.USUARIO_ACTUALIZA)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FECHA_ACTUALIZA)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FECHA_ACTUALIZA)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ACTIVO)
+            Activo
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.ACTIVO)
         </dd>
 
+        <dt>
+            Area
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NOMBRE_AREA)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CODIGO_EMPLEADO }) |
-    @Html.ActionLink("Back to List", "Index")
+    <button type="button" class="btn btn-success">@Html.ActionLink("Modificar", "Edit", new { id = Model.CODIGO_EMPLEADO })</button>
+    <button type="button" class="btn btn-secondary">@Html.ActionLink("Regresar", "EMPLEADO")</button>
 </p>
